# risproject

./: .gitignore  CMakeLists.txt  COLLABORATION.md  README.md  ROS1_GUIDE.md  TASK_BREAKDOWN.md  VISION_TUNING.md  package.xml
config/: game_params.yaml  rviz_config.rviz
docs/: architecture.md  vision_node_cpp.md
include/memory_game/: .gitkeep
launch/: full_system.launch  real_robot.launch  simulation.launch  test_rviz.launch  vision_only.launch
launch/newmotion/: MOTION_RUNBOOK.md
memory_game_ui/: CMakeLists.txt  package.xml
memory_game_ui/scripts/: game_ui.py
msg/: Block.msg  BlockArray.msg  PlayerSelection.msg
newmotion/: MOTION_RUNBOOK.md  motion_hw_node.cpp  motion_moveit_node.cpp  probe_motion_interface.sh
scripts/: player_selection.py  run_vision.sh  setup_workspace.sh  start_camera.sh  test_player_selection.py  vision_node_full_python.py
src/: game_node.cpp  motion_hw_node.cpp  motion_node.cpp  vision_node.cpp
try_clean/: README.md  player_selection.py  vision_node_no_player_selection.cpp  vision_node_simple_selection.cpp
ui/: app.js  index.html  server.py  styles.css
urdf/: panda.urdf
