<?xml version="1.0"?>
<package format="2">
  <name>memory_game</name>
  <version>0.1.0</version>
  <description>Memory game implementation using Franka Emika Panda robot with RGB and depth cameras</description>

  <maintainer email="team@example.com">Memory Game Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- Optional dependencies for future implementation -->
  <!-- <build_depend>cv_bridge</build_depend> -->
  <!-- <build_depend>image_transport</build_depend> -->
  <!-- <build_depend>pcl_ros</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <!-- <build_depend>moveit_core</build_depend> -->
  <!-- <build_depend>franka_ros</build_depend> -->

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- Optional dependencies for future implementation -->
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <!-- <exec_depend>image_transport</exec_depend> -->
  <!-- <exec_depend>pcl_ros</exec_depend> -->
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- <exec_depend>moveit_core</exec_depend> -->
  <!-- <exec_depend>franka_ros</exec_depend> -->

  <!-- Export -->
  <export>
  </export>
</package>
